input: fixed button display on smallscreens

--- a/app/modules/entities/scss/_edition_creation.scss
+++ b/app/modules/entities/scss/_edition_creation.scss
@@ -22,7 +22,6 @@
     padding-right: 1em;
     // centering vertically
     padding-top: 0.1em;
-    width: auto;
     white-space: nowrap;
   }
   .from-isbn{
